# anime-launcher-sdk

./: .gitmodules  Cargo.toml  README.md
src/: consts.rs  discord_rpc.rs  game.rs  lib.rs  sessions.rs  states.rs
src/components/: dxvk.rs  loader.rs  mfc140.rs  mod.rs  wine.rs
src/components/wine/: mod.rs  unified_wine.rs
src/config/: components.rs  mod.rs  patch.rs  resolution.rs
src/config/game/: dxvk.rs  mod.rs  paths.rs
src/config/game/enhancements/: fsr.rs  hud.rs  mod.rs
src/config/game/enhancements/fps_unlocker/: mod.rs
src/config/game/enhancements/fps_unlocker/config/: fps.rs  mod.rs  window_mode.rs
src/config/game/enhancements/gamescope/: framerate.rs  mod.rs  window_type.rs
src/config/game/wine/: mod.rs  virtual_desktop.rs  wine_lang.rs  wine_sync.rs
src/config/launcher/: discord_rpc.rs  mod.rs  repairer.rs
src/config/schema_blanks/: dxvk.rs  fps.rs  fps_star_rail.rs  fps_unlocker.rs  fsr.rs  hud.rs  mod.rs  repairer.rs  resolution.rs  sandbox.rs  window_mode.rs
src/config/schema_blanks/gamescope/: framerate.rs  mod.rs  options.rs  size.rs  window_mode.rs  window_size.rs  window_type.rs
src/config/schema_blanks/gamescope/upscaling/: filter.rs  mod.rs  sharpness.rs  upscaler.rs
src/config/schema_blanks/sandbox/: mod.rs  mounts.rs
src/config/schema_blanks/wine/: mod.rs  shared_libraries.rs  virtual_desktop.rs  wine_drives.rs  wine_lang.rs  wine_sync.rs
src/fps_unlocker/: config_schema.rs  mod.rs
src/game/: mod.rs
src/games/genshin/: consts.rs  env_emulation.rs  fps_unlocker.rs  game.rs  mod.rs  sessions.rs  states.rs
src/games/genshin/config/: mod.rs
src/games/genshin/config/schema/: components.rs  mod.rs  patch.rs
src/games/genshin/config/schema/game/: enhancements.rs  mod.rs  paths.rs
src/games/genshin/config/schema/game/fps_unlocker/: config.rs
src/games/genshin/config/schema/launcher/: discord_rpc.rs  mod.rs  sophon.rs
src/games/genshin/fps_unlocker/: mod.rs
src/games/honkai/: consts.rs  game.rs  mod.rs  sessions.rs  states.rs
src/games/honkai/config/: mod.rs
src/games/honkai/config/schema/: mod.rs  patch.rs
src/games/honkai/config/schema/game/: mod.rs  paths.rs
src/games/honkai/config/schema/launcher/: discord_rpc.rs  mod.rs
src/games/pgr/: consts.rs  game.rs  sessions.rs  states.rs
src/games/pgr/config/: mod.rs
src/games/pgr/config/schema/: components.rs  mod.rs
src/games/pgr/config/schema/game/: mod.rs
src/games/pgr/config/schema/launcher/: discord_rpc.rs  mod.rs
src/games/star_rail/: consts.rs  game.rs  mod.rs  sessions.rs  states.rs
src/games/star_rail/config/: mod.rs
src/games/star_rail/config/schema/: mod.rs  patch.rs
src/games/star_rail/config/schema/game/: enhancements.rs  mod.rs  paths.rs
src/games/star_rail/config/schema/game/fps_unlocker/: config.rs  mod.rs
src/games/star_rail/config/schema/launcher/: discord_rpc.rs  mod.rs
src/games/star_rail/fps_unlocker/: config_schema.rs  mod.rs
src/games/wuwa/: consts.rs  game.rs  mod.rs  sessions.rs  states.rs
src/games/wuwa/config/: mod.rs
src/games/wuwa/config/schema/: components.rs  mod.rs  patch.rs
src/games/wuwa/config/schema/game/: enhancements.rs  mod.rs  paths.rs
src/games/wuwa/config/schema/launcher/: discord_rpc.rs  mod.rs
src/games/zzz/: consts.rs  game.rs  mod.rs  sessions.rs  states.rs
src/games/zzz/config/: mod.rs
src/games/zzz/config/schema/: components.rs  mod.rs
src/games/zzz/config/schema/game/: enhancements.rs  mod.rs  paths.rs
src/games/zzz/config/schema/launcher/: discord_rpc.rs  mod.rs
src/genshin/: consts.rs  game.rs  mod.rs  states.rs
src/genshin/config/: mod.rs
src/genshin/config/schema/: mod.rs  patch.rs
src/genshin/config/schema/game/: fps_unlocker.rs  mod.rs  paths.rs
src/genshin/config/schema/game/fps_unlocker/: config.rs  mod.rs
src/genshin/config/schema/launcher/: mod.rs
src/genshin/fps_unlocker/: config_schema.rs  mod.rs
src/honkai/: consts.rs  game.rs  mod.rs  states.rs
src/honkai/config/: mod.rs
src/honkai/config/schema/: components.rs  mod.rs  patch.rs
src/honkai/config/schema/game/: enhancements.rs  mod.rs
src/honkai/config/schema/launcher/: discord_rpc.rs  mod.rs
src/star_rail/: consts.rs  game.rs  states.rs
src/star_rail/config/: mod.rs
src/star_rail/config/schema/: components.rs  mod.rs  patch.rs
src/star_rail/config/schema/game/: mod.rs  paths.rs
src/star_rail/config/schema/launcher/: mod.rs
src/states/: mod.rs
