[package]
name = "anime-launcher-sdk"
version = "1.12.2"
authors = ["Nikita Podvirnyy <krypt0nn@vk.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/an-anime-team/anime-launcher-sdk"
edition = "2021"

[dependencies.anime-game-core]
git = "https://github.com/an-anime-team/anime-game-core"
tag = "1.17.2"
features = ["all"]

# path = "../anime-game-core" # ! for dev purposes only

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
tracing = "0.1"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

cached = { version = "0.46", features = ["proc_macro"] }
enum-ordinalize = { version = "3.1", optional = true }

wincompatlib = { version = "0.7.4", features = ["all"], optional = true }
lazy_static = { version = "1.4.0", optional = true }
md-5 = { version = "0.10", features = ["asm"], optional = true }
discord-rich-presence = { version = "0.2.3", optional = true }

[features]
genshin = ["anime-game-core/genshin"]
star-rail = ["anime-game-core/star-rail"]
honkai = ["anime-game-core/honkai"]
pgr = ["anime-game-core/pgr"]

star-rail-patch = ["anime-game-core/patch-jadeite"]
honkai-patch = [
    "anime-game-core/patch-jadeite",
    "anime-game-core/patch-mfplat"
]
pgr-patch = ["anime-game-core/patch-mfc140"]

# Common features
states = []
config = ["dep:serde", "dep:serde_json", "dep:enum-ordinalize"]
components = ["dep:wincompatlib", "dep:lazy_static"]
game = ["components", "config"]
discord-rpc = ["dep:discord-rich-presence"]
sandbox = []
sessions = []

# Genshin-specific features
environment-emulation = []
fps-unlocker = ["dep:md-5"]

all = [
    "states",
    "config",
    "components",
    "game",
    "discord-rpc",
    "sandbox",
    "sessions",
    "environment-emulation",
    "fps-unlocker"
]

default = ["all"]
