[package]
name = "anime-launcher-sdk"
version = "1.28.7"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/an-anime-team/anime-launcher-sdk"
edition = "2021"

[dependencies.anime-game-core]
git = "https://github.com/an-anime-team/anime-game-core"
tag = "1.33.1"
features = ["all"]

# path = "../anime-game-core" # ! for dev purposes only

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
tracing = "0.1"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

cached = { version = "0.55", features = ["proc_macro"] }
enum-ordinalize = { version = "4.3", optional = true }

wincompatlib = { version = "0.7.7", features = ["all"], optional = true }
lazy_static = { version = "1.5.0", optional = true }
md-5 = { version = "0.10", features = ["asm"], optional = true }

[features]
genshin = ["anime-game-core/genshin", "anime-game-core/sophon"]
star-rail = ["anime-game-core/star-rail"]
zzz = ["anime-game-core/zzz"]
honkai = ["anime-game-core/honkai"]
pgr = ["anime-game-core/pgr"]
wuwa = ["anime-game-core/wuwa"]

star-rail-patch = ["anime-game-core/patch-jadeite"]
honkai-patch = ["anime-game-core/patch-jadeite"]
pgr-patch = ["anime-game-core/patch-mfc140"]
wuwa-patch = ["anime-game-core/patch-jadeite"]

# Common features
states = []
config = ["dep:serde", "dep:serde_json", "dep:enum-ordinalize"]
components = ["dep:wincompatlib", "dep:lazy_static"]
game = ["components", "config"]
sandbox = []
sessions = []

# Genshin-specific features
environment-emulation = []
fps-unlocker = ["dep:md-5"]

all = [
    "states",
    "config",
    "components",
    "game",
    "sandbox",
    "sessions",
    "environment-emulation",
    "fps-unlocker"
]

default = ["all"]
